--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
 
+# ignore experiment results
+results/
+
 # KDE directory preferences
 .directory
 
